# nam_volume_knob

./: .gitattributes  .gitignore  .gitmodules  ARCHITECTURE.md  CMakeLists.txt  LICENSE  README.md  REVIEW.md  REVIEW_ROUND2.md  TECHNICAL.md  TEST_PROCEDURE.md  WEB_TESTING.md  audio_test  nam-volume-knob  test-web-logic.js  test-web.html
.github/workflows/: pages.yml
docs/: README.md
include/: cli.h  metadata_updater.h  nam_parser.h  validator.h  weight_scaler.h
src/: cli.cpp  main.cpp  metadata_updater.cpp  nam_parser.cpp  validator.cpp  web_bindings.cpp  weight_scaler.cpp
tests/: audio_test.cpp  test_main.cpp
web/: app.js  index.html  nam-volume-knob-web.js  nam-volume-knob-web.wasm  serve_local.py  styles.css
